2005-09-24 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b2

 * New: Its now possible to set "browser" as default language. Covers patch #1176481.
 
 * New: New function getDefaultLanguage.
 
 * Change: use of new function. Some code cleanup.
 
2005-09-23 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b1

 * New: If selfregister is on, then inside the login popup is a link to register.
        This covers Patch #1042354.
        
2005-09-22 Chris Kelly <ckdake@users.sf.net> 1.5.1

	* Release:  1.5.1

2005-09-22 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b13

	* FixFix: b11 broke more then it fixed :-( FIXed it :-)

2005-09-21 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b12

	* Fix: Urls for Gallery embedded into CPGNuke didnt work.
	       So we do the same for cpgnuke as for the other *nukes done in 1.5.1-RC3-cvs-b3.
	
2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b11

	* "Fix": Cach invalid input for $page and set_albumListPage in view_album.php and stats.php
	Found by Andrew Khlebutin

2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b10

	* Fix: fs_opendir leaks resources.
	  Found and fixed by David Faulkner

2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b9

        * Fix: Make changeToAlbum emails HTML-mails, so links work correctly.
	  Thanks to Ansolon.

2005-09-15 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b8

	* Fix: Typo.

2005-09-15 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b7

	* Fix: Turn of verbose display of exifdata with jhead.
	       This caused problems as verbosed data has different structure.
	
	* Fix: First line of exifdata was always removed,
	       regardless wether jhead or exiftags is used.

2005-09-13 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b6

	* Change: Added paramater to gallery_mail() to send mail as HTML-mail.

	* Fix: Make comment emails HTML-mails, so links work correctly.

2005-09-12 Dariush Molavi <dari@nukedgallery.net> 1.5.1-RC4-cvs-b5

	* Change: New address for Free Software Foundation in GPL header.
