@@ -198,8 +198,10 @@ a.modcaption:hover {
 	  font-size: 12px; 
 	}
 .attention  /*voting instructions */
-	{
-	}
+{
+    color: #006cff;
+}
+
 .headbox  /* box around the page headers */
 	{
 	}
