@@ -197,8 +197,10 @@ input:focus {
 	  font-size: 12px; 
 	}
 .attention  /*voting instructions */
-	{
-	}
+{
+    color: #00e600;
+}
+
 .headbox  /* box around the page headers */
 	{
 	}
