@@ -198,8 +198,9 @@ input:focus {
 	  font-size: 12px; 
 	}
 .attention  /*voting instructions */
-	{
-	}
+{
+    color: #00e600;
+}
 .headbox  /* box around the page headers */
 	{
 	}
