@@ -152,8 +152,10 @@ a.modcaption:hover {
 	  font-size: 12px; 
 	}
 .attention  /*voting instructions */
-	{
-	}
+{
+    color: #ff00b2;
+}
+
 .headbox  /* box around the page headers */
 	{
 	}
