@@ -125,7 +125,8 @@ input:focus {
 	}
 
 a.modcaption {
-       color: #C0C0C0;
+       1color: #C0C0C0;
+       color: green;
 }
 
 a.modcaption:hover {
@@ -151,11 +152,14 @@ a.modcaption:hover {
 	  font-size: 12px; 
 	}
 .attention  /*voting instructions */
-	{
-	}
+{
+    color: #f0000c;
+}
+
 .headbox  /* box around the page headers */
-	{
-	}
+{
+}
+
 .head  /* page headers behind the Gallery title*/
 	{ 
 	  font-family:verdana, arial, sans-serif;
@@ -371,7 +375,7 @@ a.modcaption:hover {
 
 .vafloat /* float for view album - text */
  {
-	float: none; 
+	float: none;
  }
 
 .vafloat2 /* float for view album - images */
