@@ -1,3 +1,7 @@
+2005-09-24 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b3
+
+ * Fix: Voting instruction texts in some skins. Bug#1249919 .
+
 2005-09-24 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b2
 
  * New: Its now possible to set "browser" as default language. Covers patch #1176481.
